# claude-certified-associate-foundations

./: .editorconfig  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  REPOSITORY-MANIFEST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: CODEOWNERS  pull_request_template.md
ai-systems-engineering/: README.md  philosophy.md  workflow.md
case-studies/: README.md  incident-triage-workflow.md  pqc-readiness-assistant.md  secure-policy-assistant.md
data/: README.md  flashcards.json  questions.json
docs/: certification-overview.md  exam-strategy.md  glossary.md  index.md  master-cheat-sheet.md  official-resources.md  progress-tracker.md  question-writing-guide.md  study-plan.md
modules/: README.md
notes/: README.md
patterns/: README.md  capability-patterns.md  context-management-patterns.md  failure-localization-pattern.md  memory-patterns.md  model-selection-patterns.md  task-specification-before-prompting.md
practice-exams/: README.md  practice-exam-01-answers.md  practice-exam-01.md  practice-exam-02-answers.md  practice-exam-02.md
prompts/: README.md  evaluator-rubric-template.md  governance-review-template.md  grounded-analysis-template.md  structured-extraction-template.md  task-brief-template.md  troubleshooting-template.md  workflow-orchestrator-template.md
scripts/: README.md  check_content.py  publish.ps1  publish.sh
tests/: test_study_cli.py
tools/: README.md  __init__.py  study_cli.py
(+95 files in other folders)
